<resources>
    <string name="app_name">MyPlanner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_string">Login</string>
    <string name="website">www.codeherenow.com</string>
    <string name="underlinedText"><u>Forgot Password ?</u></string>
    <string name="underlinedText_mypack"><u>My Pack notifications</u></string>
    <string name="underlinedText_mypack_upd"><u>My Pack</u></string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_password_sent">PasswordSent</string>
    <string name="title_activity_customize__updates">Customize_Updates</string>
    <string name="title_activity_my_pack__customization">MyPack_Customization</string>
    <string name="title_activity_my_pack__updates">MyPack_Updates</string>
    <string name="underlinedText_eBills"><u>eBills</u></string>
    <string name="title_activity_course_updates">CourseUpdates</string>
    <string name="underlinedText_Piazza"><u>Piazza</u></string>
    <string name="underlinedText_Piazzaid1"><u>Instr Note: Class Cancelled</u></string>
    <string name="underlinedText_Piazzaid2"><u>DE Student Final Exam</u></string>
    <string name="underlinedText_Moodle"><u>Moodle</u></string>
    <string name="underlinedText_Moodleid1"><u>New Assignment Posted</u></string>
    <string name="underlinedText_Moodleid2"><u>Assignment 8 due in 2 days</u></string>
    <string name="underlinedText_CourseWebsiteUpdates"><u>Course Website</u></string>
    <string name="underlinedText_CourseWebsiteUpdatesid1"><u>Lecture Videos</u></string>
    <string name="underlinedText_CourseWebsiteUpdatesid2"><u>Lecture Notes</u></string>
    <string name="title_activity_course_customization">course_customization</string>

</resources>
