<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="false">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent">


        <TextView android:text="My Planner" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/Title"
            android:textSize="32sp"
            android:background="#FF0000"
            android:textColor="#FFFFFF"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:onClick="gotoHome"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/checklist"
            android:scaleType="fitCenter"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="300dp"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Human Computer Interaction"
            android:textColor="#000000"
            android:textSize="22dp"
            android:id="@+id/HCI"
            android:layout_below="@+id/Title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="90dp"
            />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underlinedText_Piazza"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/PiazzaUpdates"
            android:textSize="20dp"
            android:onClick="gotoPiazza"
            android:clickable="true"
            android:layout_below="@+id/HCI"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

        </TextView>

        <TextView android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/underlinedText_Piazzaid1"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/PiazzaUpdatesid1"
            android:textSize="20dp"
            android:onClick="gotoPiazza"
            android:clickable="true"
            android:layout_below="@+id/PiazzaUpdates"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:textStyle="bold"
            android:background="@drawable/my_border"
            android:paddingLeft="10dp"
            >
        </TextView>

        <ImageButton
            android:id="@+id/arrow2"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginTop="167dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:background="@android:color/transparent"
            />

        <TextView android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/underlinedText_Piazzaid2"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/PiazzaUpdatesid2"
            android:textSize="20dp"
            android:onClick="gotoPiazza"
            android:clickable="true"
            android:layout_below="@+id/PiazzaUpdatesid1"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/my_border"
            android:paddingLeft="10dp"
            >

        </TextView>

        <ImageButton
            android:id="@+id/arrow3"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginTop="217dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:background="@android:color/transparent"
            />


        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underlinedText_Moodle"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/MoodleUpdates"
            android:textSize="20dp"
            android:onClick="gotoMoodle"
            android:clickable="true"
            android:layout_below="@+id/PiazzaUpdatesid2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"

            >

        </TextView>

        <TextView android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/underlinedText_Moodleid1"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/MoodleUpdatesid1"
            android:textSize="20dp"
            android:onClick="gotoMoodle"
            android:clickable="true"
            android:layout_below="@+id/MoodleUpdates"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/my_border"
            android:paddingLeft="10dp"
            >

        </TextView>

        <ImageButton
            android:id="@+id/arrow4"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginTop="327dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:background="@android:color/transparent"
            />

        <TextView android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/underlinedText_Moodleid2"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/MoodleUpdatesid2"
            android:textSize="20dp"
            android:onClick="gotoMoodle"
            android:clickable="true"
            android:layout_below="@+id/MoodleUpdatesid1"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/my_border"
            android:paddingLeft="10dp"
            >

        </TextView>

        <ImageButton
            android:id="@+id/arrow5"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginTop="377dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:background="@android:color/transparent"
            />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underlinedText_CourseWebsiteUpdates"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/CourseWebsiteUpdates"
            android:textSize="20dp"
            android:onClick="gotoCourseWebsite"
            android:clickable="true"
            android:layout_below="@+id/MoodleUpdatesid2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

        </TextView>

        <TextView android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/underlinedText_CourseWebsiteUpdatesid1"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/CourseWebsiteUpdatesid1"
            android:textSize="20dp"
            android:onClick="gotoCourseWebsite"
            android:clickable="true"
            android:layout_below="@+id/CourseWebsiteUpdates"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/my_border"
            android:paddingLeft="10dp"
            >

        </TextView>

        <ImageButton
            android:id="@+id/arrow6"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginTop="487dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:background="@android:color/transparent"
            />

        <TextView android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/underlinedText_CourseWebsiteUpdatesid2"
            android:textColor="@color/text_color"
            android:autoLink="web"
            android:id="@+id/CourseWebsiteUpdatesid2"
            android:textSize="20dp"
            android:onClick="gotoCourseWebsite"
            android:clickable="true"
            android:layout_below="@+id/CourseWebsiteUpdatesid1"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/my_border"
            android:paddingLeft="10dp"
            >

        </TextView>

        <ImageButton
            android:id="@+id/arrow7"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow"
            android:scaleType="fitCenter"
            android:layout_marginTop="537dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:background="@android:color/transparent"
            />

    </RelativeLayout>
</ScrollView>
